--- a/CSS/perfil.scss
+++ b/CSS/perfil.scss
@@ -81,13 +81,12 @@ body {
   border-right: 50vw solid transparent;
   border-top: 150px solid #505050;
 }
-
-.timeline {
-  *,
-  *::before,
-  *::after {
-    box-sizing: border-box;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
   }
+.timeline {
   position: relative;
   width: 100vw;
   max-width: 1140px;
@@ -103,6 +102,24 @@ body {
   bottom: 0;
   left: 50%;
   margin-left: -1px;
+}
+.timeline2 {
+  position: relative;
+  width: 100vw;
+  max-width: 1140px;
+  margin: 0 auto;
+  padding: 15px 0;
+}
+.timeline2::after {
+  content: "";
+  position: absolute;
+  width: 2px;
+  background: #f5f5f5;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  margin-left: -1px;
+  border: 1px dashed #505050;
 }
 .container {
   padding: 15px 30px;
