--- a/CSS/perfil.scss
+++ b/CSS/perfil.scss
@@ -1,20 +1,31 @@
 body {
-  width: 100vw;
+  width: 100%;
   margin: 0px;
   font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
 }
-.navbar {
+nav {
   background-color: #0c0c0c;
   color: #f5f5f5;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   height: auto;
   margin: 0px;
   z-index: 100;
+  position: sticky;
+  top: 0;
   div.logo {
-    padding-left: 5px;
+    height: auto;
+    width: 75px;
+    margin: 5px 20px;
+    img{
+      width: 100%;
+      height: auto;
+    }
+  }
+  div.logo:hover{
+    box-shadow: 0px 10px 10px 0px #e0841a;
   }
   form {
     display: flex;
@@ -24,22 +35,26 @@ body {
     flex-direction: row;
     input[type="search"] {
       width: 100%;
-      height: 30px;
+      height: 40px;
       background: #f5f5f5;
       padding: 0 1.6rem;
       border-radius: 7rem;
-      appearance: none; //for iOS input[type="search"] roundedness issue. border-radius alone doesn't work/
+      appearance: none; 
       position: relative;
-      button {
-        display: flex;
-        position: absolute;
-        top: 0;
-        right: 0;
-        width: 6rem;
-        font-weight: bold;
-        background: #e8a860;
-        border-radius: 0 7rem 7rem 0;
-      }
+    }
+    button {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 40px;
+      height: 40px;
+      font-weight: bold;
+      background: #e8a860;
+      border-radius: 50%;
+      border-radius: 7rem;
     }
   }
   div.perfil_logo {
@@ -47,7 +62,7 @@ body {
     justify-content: space-around;
     flex-direction: row;
     align-items: center;
-    width: 300px;
+
     div.img_logo {
       height: 50px;
       min-width: 50px;
@@ -57,13 +72,51 @@ body {
     }
     div.usuario {
       font-size: 18px;
-      padding-right: 20px;
+    }
+    //DESPLEGABLE!!!!!!
+    .dropdown {
+      display: inline-block;
+      position: relative;
+    }
+    button{
+      background-color: #e0841a;
+      color: #0c0c0c;
+      font-size: 30px;
+      border-radius: 20%;
+      width: 40px;
+      height: 40px;
+      margin-right: 5px;
+      margin-left: 10px;
+    }
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      width: 100px;
+      overflow: auto;
+      right: 0;
+      background-color: #505050;
+      box-shadow: 0px 10px 10px 0px #0c0c0c;
+      z-index: 100;
+    }
+    .dropdown:hover .dropdown-content {
+      display: block;
+      right: 0;
+    }
+    .dropdown-content a {
+      display: block;
+      color: #f5f5f5;
+      padding: 5px;
+      text-decoration: none;
+    }
+    .dropdown-content a:hover {
+      color: #FFFFFF;
+      background-color: #e8a860;
     }
   }
 }
 .perfil {
   display: flex;
-  width: 100vw;
+  width: 100%;
   justify-content: space-around;
   background-color: #505050;
   color: #f5f5f5;
@@ -73,12 +126,32 @@ body {
     min-width: 100px;
     padding: 10px;
   }
+  .redes{
+    width: 100px;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  .redes img{
+    color: #f5f5f5;
+    font-size: 1.6em;
+    width: auto;
+    height: 50px;
+    .github{
+      border-radius: 50%;
+    }
+  }
+  .redes img:hover{
+    box-shadow: 0px 10px 10px 0px #0c0c0c;
+    border-radius: 50%;
+  }
 }
 .triangulo {
   width: 0;
   height: 0;
-  border-left: 50vw solid transparent;
-  border-right: 50vw solid transparent;
+  border-left: 49.3vw solid transparent;
+  border-right: 49.3vw solid transparent;
   border-top: 150px solid #505050;
 }
 *,
@@ -88,7 +161,7 @@ body {
 }
 .timeline {
   position: relative;
-  width: 100vw;
+  width: 100%;
   max-width: 1140px;
   margin: 0 auto;
   padding: 15px 0;
@@ -105,7 +178,7 @@ body {
 }
 .timeline_f {
   position: relative;
-  width: 100vw;
+  width: 100%;
   max-width: 1140px;
   margin: 0 auto;
   padding: 15px 0;
@@ -123,7 +196,7 @@ body {
 }
 .timeline_c {
   position: relative;
-  width: 100vw;
+  width: 100%;
   max-width: 1140px;
   margin: 0 auto;
   padding: 15px 0;
@@ -248,7 +321,7 @@ body {
 @media (max-width: 767.98px) {
   .triangulo {
     border-left: 90px solid transparent;
-    border-right: calc(100vw - 90px) solid transparent;
+    border-right: calc(100% - 90px) solid transparent;
     border-top: 100px solid #505050;
   }
   .timeline::after {
