--- a/CSS/editarPerfil.scss
+++ b/CSS/editarPerfil.scss
@@ -264,3 +264,34 @@ input:-webkit-autofill{
 #submit-btn:hover {
   box-shadow: 0px 1px 18px #a35f11;
 }
+footer{
+  background-color: #0c0c0c;
+  color: #f5f5f5;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  .logo{
+      display: flex;
+      flex-direction: row;
+      height: auto;
+      width: 50px;
+      margin: 5px 20px;
+      img{
+          width: 100%;
+          height: auto;
+      }
+  }
+  .follow{
+      a{
+          color: #f5f5f5;
+      }
+  }
+  .derechos{
+      display: flex;
+      flex-direction: row-reverse;
+      flex-wrap: wrap;
+      align-content: flex-end;
+      font-size: 10px;
+      margin-right: 10px;
+  }
+}
