--- a/CSS/login.css
+++ b/CSS/login.css
@@ -6,6 +6,7 @@ body {
   background: -webkit-linear-gradient(bottom, #e8a860, #e0841a);
   background-repeat: no-repeat;
   font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+  margin: 0;
 }
 
 label {
@@ -137,4 +138,34 @@ label {
 
 .g_id_signin {
   margin-bottom: 16px;
+}
+
+footer {
+  background-color: #0c0c0c;
+  color: #f5f5f5;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+footer .logo {
+  display: flex;
+  flex-direction: row;
+  height: auto;
+  width: 50px;
+  margin: 5px 20px;
+}
+footer .logo img {
+  width: 100%;
+  height: auto;
+}
+footer .follow a {
+  color: #f5f5f5;
+}
+footer .derechos {
+  display: flex;
+  flex-direction: row-reverse;
+  flex-wrap: wrap;
+  align-content: flex-end;
+  font-size: 10px;
+  margin-right: 10px;
 }/*# sourceMappingURL=login.css.map */
