--- a/CSS/perfil.scss
+++ b/CSS/perfil.scss
@@ -406,3 +406,35 @@ body {
     border-radius: 500px 0 0 500px;
   }
 }
+footer{
+  margin-top: 20px;
+  background-color: #0c0c0c;
+  color: #f5f5f5;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  .logo{
+      display: flex;
+      flex-direction: row;
+      height: auto;
+      width: 50px;
+      margin: 5px 20px;
+      img{
+          width: 100%;
+          height: auto;
+      }
+  }
+  .follow{
+      a{
+          color: #f5f5f5;
+      }
+  }
+  .derechos{
+      display: flex;
+      flex-direction: row-reverse;
+      flex-wrap: wrap;
+      align-content: flex-end;
+      font-size: 10px;
+      margin-right: 10px;
+  }
+}
