--- a/CSS/home.scss
+++ b/CSS/home.scss
@@ -88,7 +88,8 @@ nav {
 }
 
 .welcome{
-    background-image: url('../maquetacion/banner.jpg');
+    background-image: url("../maquetacion/homebg.webp");
+    background-color: #f5f5f5;
     background-position: center;
     height: 300px;
     .description{
@@ -97,13 +98,21 @@ nav {
         background-color: rgba(80, 80, 80, 0.8);
         border-radius: 12px;
         border: 1px solid rgba(255, 255, 255, 0.125);
-        width: 40%;
+        width: 50%;
         position: absolute;
-        left: 50%;
+        left: 10%;
         margin-top: 10px;
         color: #f5f5f5;
-        h2, h3, p{
-            margin: 5px 10px;
+        h2 {
+            font-size: 32px;
+            margin: 10px 20px;
+        }
+        h3 {
+            font-size: 24px;
+            margin: 5px 40px;
+        }
+        p {
+            margin: 10px 40px;
         }
     }
 }
@@ -118,7 +127,7 @@ nav {
         -webkit-backdrop-filter: blur(12px) saturate(100%);
         background: #e0841a;
         border-radius: 25px;
-        border: 1px solid rgba(255, 255, 255, 0.125);
+        border: 1px solid #0c0c0c;
         width: 45%;
         left: 60%;
         display: flex;
@@ -136,6 +145,9 @@ nav {
             width: 200px;
             background-color: #f5f5f5;
             border-radius: 50%;
+            img{
+                height: 100%;
+            }
         }
     }
 }
