--- a/CSS/editarPerfil.scss
+++ b/CSS/editarPerfil.scss
@@ -177,6 +177,8 @@ nav {
   left: 90px;
 }
 .container .form {
+  border: solid #0c0c0c 2px;
+  box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.65);
   padding: 30px 30px 30px 90px;
   background: #505050;
   position: relative;
@@ -213,7 +215,7 @@ nav {
   font-size: 15px;
   color: #f5f5f5;
   max-width: 100%;
-  max-height: 100px;
+  max-height: 200px;
 }
 
 .container #init_date, #end_date, #fecha_nacimiento {
@@ -248,9 +250,9 @@ input:-webkit-autofill{
 
 #submit-btn {
   background: #e0841a;
-  border: none;
+  border: solid #0c0c0c 1.9px;
   border-radius: 21px;
-  box-shadow: 0px 1px 8px #e0841a;
+  box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.65);
   cursor: pointer;
   color: #f5f5f5;
   height: 42.3px;
