--- a/CSS/register.css
+++ b/CSS/register.css
@@ -22,6 +22,7 @@ label {
 
 #card {
   background: #f5f5f5;
+  border: solid #0c0c0c 2px;
   border-radius: 8px;
   box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.65);
   height: 500px;
@@ -49,9 +50,9 @@ label {
 
 #submit-btn {
   background: #e0841a;
-  border: none;
+  border: solid #0c0c0c 1.9px;
   border-radius: 21px;
-  box-shadow: 0px 1px 8px #e0841a;
+  box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.65);
   cursor: pointer;
   color: #f5f5f5;
   height: 42.3px;
@@ -135,6 +136,17 @@ label {
   top: 0.45em;
   height: 1px;
   background-color: #757575;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px #f5f5f5 inset !important;
+}
+
+input:-webkit-autofill {
+  -webkit-text-fill-color: #0c0c0c !important;
 }
 
 footer {
