--- a/CSS/editarPerfil.scss
+++ b/CSS/editarPerfil.scss
@@ -246,7 +246,7 @@ input:-webkit-autofill{
   -webkit-text-fill-color: #f5f5f5 !important;
 }
 
-#submit-btn {
+.submit-btn {
   background: #e0841a;
   border: none;
   border-radius: 21px;
