--- a/CSS/perfil.scss
+++ b/CSS/perfil.scss
@@ -165,9 +165,13 @@ body {
   color: #f5f5f5;
   .foto {
     background-color: #e8a860;
-    height: 200px;
+    height: 150px;
     min-width: 100px;
-    padding: 10px;
+    margin-top: 10px;
+    #foto-perfil{
+      height: 150px;
+      border-radius: 50%;
+    }
   }
   .redes{
     width: 100px;
