--- a/CSS/register.scss
+++ b/CSS/register.scss
@@ -3,6 +3,7 @@ a {
 }
 body {
   background: -webkit-linear-gradient(bottom, #e8a860, #e0841a);
+  min-height: 100vh;
   background-repeat: no-repeat;
   font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
   margin: 0;
