--- a/CSS/home.css
+++ b/CSS/home.css
@@ -1,7 +1,8 @@
 body {
   background: -webkit-linear-gradient(bottom, #e3bf96, #e0841a);
   background-repeat: no-repeat;
-  width: 100%;
+  width: 100vw;
+  min-height: 100vh;
   margin: 0px;
   font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
 }
@@ -94,6 +95,7 @@ nav .buttons .register {
 
 .welcome {
   background-image: url("../maquetacion/homebg.webp");
+  background-repeat: no-repeat;
   background-color: #f5f5f5;
   background-position: center;
   height: 300px;
