--- a/CSS/login.css
+++ b/CSS/login.css
@@ -7,6 +7,7 @@ body {
   background-repeat: no-repeat;
   font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
   margin: 0;
+  min-height: 100vh;
 }
 
 label {
