--- a/CSS/login.scss
+++ b/CSS/login.scss
@@ -6,6 +6,7 @@ body {
   background-repeat: no-repeat;
   font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
   margin: 0;
+  min-height: 100vh;
 }
 label {
   font-size: 11pt;
