--- a/CSS/perfil.css
+++ b/CSS/perfil.css
@@ -187,9 +187,13 @@ body {
 }
 .perfil .foto {
   background-color: #e8a860;
-  height: 200px;
+  height: 150px;
   min-width: 100px;
-  padding: 10px;
+  margin-top: 10px;
+}
+.perfil .foto #foto-perfil {
+  height: 150px;
+  border-radius: 50%;
 }
 .perfil .redes {
   width: 100px;
